WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166638
[Win] Some xmlhttprequest tests are failing.
https://bugs.webkit.org/show_bug.cgi?id=166638
Summary
[Win] Some xmlhttprequest tests are failing.
Per Arne Vollan
Reported
2017-01-02 06:08:53 PST
Some xmlhttprequest tests are failing because the request timeout is set to zero.
Attachments
Patch
(3.63 KB, patch)
2017-01-02 06:13 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-01-02 06:13:44 PST
Created
attachment 297894
[details]
Patch
Per Arne Vollan
Comment 2
2017-01-03 01:44:06 PST
Thanks for reviewing!
WebKit Commit Bot
Comment 3
2017-01-03 02:06:47 PST
Comment on
attachment 297894
[details]
Patch Clearing flags on attachment: 297894 Committed
r210236
: <
http://trac.webkit.org/changeset/210236
>
WebKit Commit Bot
Comment 4
2017-01-03 02:06:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug