[Win] Some xmlhttprequest tests are failing. https://bugs.webkit.org/show_bug.cgi?id=166638

Reviewed by Darin Adler.

The tests are failing because the request timeout is set to zero.
When the timeout is set to zero, we should use the default timeout.

* platform/network/cf/ResourceRequestCFNet.cpp:
(WebCore::ResourceRequest::doUpdatePlatformRequest):
(WebCore::ResourceRequest::doUpdatePlatformHTTPBody):


Canonical link: https://commits.webkit.org/183796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210236 268f45cc-cd09-0410-ab3c-d52691b4dbfc